# openclaw-homeassistant

./: .gitignore  AGENTS.md  GATEWAY_API.md  LICENSE  MIGRATION.md  README.md  ROADMAP.md  hacs.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: tests.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-test-infrastructure-foundation/: 01-01-PLAN.md  01-02-PLAN.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
custom_components/: __init__.py
custom_components/clawd/: __init__.py  binary_sensor.py  config_flow.py  const.py  conversation.py  diagnostics.py  exceptions.py  gateway.py  gateway_client.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/openclaw/: __init__.py  binary_sensor.py  config_flow.py  const.py  conversation.py  device_auth.py  diagnostics.py  exceptions.py  gateway.py  gateway_client.py  manifest.json  sensor.py  services.yaml  strings.json
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_config_flow.py  test_const.py  test_conversation.py  test_conversation_emoji.py  test_conversation_entity_metadata.py  test_cron_services.py  test_device_auth.py  test_diagnostics.py  test_exceptions.py  test_fixtures.py  test_gateway.py  test_gateway_client.py  test_health_check.py  test_reconnect_service.py  test_sensor.py  test_session_service.py  test_spawn_service.py  test_unload_guard.py
(+10 files in other folders)
