[project]
name = "openclaw-homeassistant"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "voluptuous>=0.15.2",
    "websockets>=12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "-ra",
    "--cov=custom_components/openclaw",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["custom_components/openclaw"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
